замена фото и велик ++

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
 <!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>-->
 <!--    </noscript>-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body class="main">
     <header class="header_main">
@@ -157,7 +158,7 @@
     <main class="gradient_move">
         <section class="main">
             <div class="main_intro_media">
-                <video class="preview_video" src="./img/video/main_section_new.mp4" preload="auto" autoplay muted loop playsinline></video>
+                <video class="preview_video" src="./img/video/main_section_new.mp4" autoplay muted loop playsinline></video>
             </div>
             <div class="main_intro_content">
                 <div class="container_main">
@@ -201,7 +202,7 @@
                     </div>
                     <div class="traffic_patrol-text-2">
                         <p class="traffic_patrol-text">
-                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.
+                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии.
                         </p>
                     </div>
                     <div class="traffic_patrol-text-3">
@@ -468,7 +469,7 @@
 <!--                    </div>-->
                     <div class="traffic_patrol-text-mobile-1">
                         <p class="traffic_patrol-text">
-                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.
+                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии.
                         </p>
                         <p class="traffic_patrol-text">
                             В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД.
@@ -576,7 +577,7 @@
                     <div class="employ-4">
                         <picture>
                             <source srcset="./img/layout/pages/main/employ.webp" type="image/webp">
-                            <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" loading="lazy" decoding="async" class="employ">
+                            <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" fetchpriority="high" class="employ">
                         </picture>
 <!--                        <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">-->
                     </div>
@@ -585,7 +586,7 @@
                             <div class="slid_img">
                                 <picture>
                                     <source srcset="./img/layout/pages/main/slider/bus.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр" loading="lazy" decoding="async">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр">-->
                                 <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
@@ -611,7 +612,7 @@
                     <div class="bus-6">
                         <picture>
                             <source srcset="./img/layout/pages/main/bus.webp" type="image/webp">
-                            <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" loading="lazy" decoding="async" class="bus">
+                            <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" fetchpriority="high" class="bus">
                         </picture>
 <!--                        <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">-->
                     </div>
@@ -661,7 +662,7 @@
                                     <div class="slid_img">
                                         <picture>
                                             <source srcset="./img/layout/pages/main/employ.webp" type="image/webp">
-                                            <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" loading="lazy" decoding="async" class="employ">
+                                            <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" fetchpriority="high" class="employ">
                                         </picture>
 <!--                                        <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">-->
                                     </div>
@@ -675,7 +676,7 @@
                                     <div class="slid_img">
                                         <picture>
                                             <source srcset="./img/layout/pages/main/bus.webp" type="image/webp">
-                                            <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" loading="lazy" decoding="async" class="bus">
+                                            <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" fetchpriority="high" class="bus">
                                         </picture>
 <!--                                        <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">-->
                                     </div>
@@ -704,7 +705,7 @@
                             <div class="slid_img">
                                 <picture>
                                     <source srcset="./img/layout/pages/main/slider/kater.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/kater.png" alt="Катер" loading="lazy" decoding="async">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/kater.png" alt="Катер" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/kater.png" alt="Катер">-->
                                 <video class="menu_preview-video" src="./img/video/kater.mp4" muted loop playsinline></video>
@@ -776,7 +777,7 @@
                             <div class="slid_img">
                                 <picture>
                                     <source srcset="./img/layout/pages/main/slider/amarok.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" loading="lazy" decoding="async">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">-->
                                 <video class="menu_preview-video" src="./img/video/test_video_card.mp4" muted loop playsinline></video>
@@ -1075,7 +1076,7 @@
                             <div class="slid_img">
                                 <picture>
                                     <source srcset="./img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" loading="lazy" decoding="async">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД">-->
                                 <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
@@ -1103,7 +1104,7 @@
                             <div class="slid_img">
                                 <picture>
                                     <source srcset="./img/layout/pages/main/slider/moskvich.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД" loading="lazy" decoding="async">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД">-->
                                 <video class="menu_preview-video" src="./img/video/moskvich.mp4" muted loop playsinline></video>
@@ -1133,7 +1134,7 @@
                                     <div class="slid_img">
                                         <picture>
                                             <source srcset="./img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" loading="lazy" decoding="async">
+                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" fetchpriority="high">
                                         </picture>
 <!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД">-->
                                         <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
@@ -1159,7 +1160,7 @@
                                     <div class="slid_img">
                                         <picture>
                                             <source srcset="./img/layout/pages/main/slider/moskvich.webp" type="image/webp">
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД" loading="lazy" decoding="async">
+                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД" fetchpriority="high">
                                         </picture>
 <!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД">-->
                                         <video class="menu_preview-video" src="./img/video/moskvich.mp4" muted loop playsinline></video>
@@ -1268,8 +1269,6 @@
             <p class="secure_transportation__text">Сайт разработан Инновационным центром «Безопасный транспорт»</p>
         </a>
     </footer>
-
-    <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <!--    <script>-->
 <!--        document.addEventListener("DOMContentLoaded", function() {-->
 <!--            let loadLater = document.querySelector('.loadLater');-->
