--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -37,9 +37,10 @@
     <!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="../style/style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <!--    <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>-->
-    <script>
+    <script defer>
         // setTimeout(() => {
         AFRAME.registerComponent("hotspots", {
             init: function () {
@@ -148,7 +149,7 @@
     </div>
 </header>
 
-<main>
+<main class="models">
     <section class="tech_spec">
         <div class="container__content">
             <div class="tech_spec__wrapper">
@@ -169,73 +170,73 @@
                             <ul class="tech_spec__outfit-list">
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_1.svg" alt="Огнетушитель">
+                                        <img src="../img/layout/outfit/amarok/outfit_1.svg" alt="Огнетушитель" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Огнетушитель</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка">
+                                        <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Аптечка</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты">
+                                        <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Инструменты</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_4.svg" alt="Трос">
+                                        <img src="../img/layout/outfit/amarok/outfit_4.svg" alt="Трос" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Трос</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_6.svg" alt="Пусковое устройство">
+                                        <img src="../img/layout/outfit/amarok/outfit_6.svg" alt="Пусковое устройство" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Пусковое устройство</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола">
+                                        <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Бланки европротокола</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_9.svg" alt="Домкрат">
+                                        <img src="../img/layout/outfit/amarok/outfit_9.svg" alt="Домкрат" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Домкрат</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/amarok/outfit_10.svg" alt="Дорожные конусы">
+                                        <img src="../img/layout/outfit/amarok/outfit_10.svg" alt="Дорожные конусы" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Дорожные конусы</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/solaris_gray/outfit_9.svg" alt="Крестообразный ключ">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_9.svg" alt="Крестообразный ключ" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Крестовой ключ</span>
                                 </li>
 <!--                                <li class="tech_spec__outfit-item">-->
 <!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/solaris_gray/outfit_10.svg" alt="Камеры видеофиксации">-->
+<!--                                        <img src="../img/layout/outfit/solaris_gray/outfit_10.svg" alt="Камеры видеофиксации" fetchpriority="high">-->
 <!--                                    </div>-->
 <!--                                    <span class="tech_spec__outfit-text">Камеры видеофиксации</span>-->
 <!--                                </li>-->
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/solaris_gray/outfit_11.svg" alt="Комплекс с нейросетью">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_11.svg" alt="Комплекс с нейросетью" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Комплекс с нейросетью</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/solaris_gray/outfit_12.svg" alt="Жезл регулировщика">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_12.svg" alt="Жезл регулировщика" fetchpriority="high">
                                     </div>
                                     <span class="tech_spec__outfit-text">Жезл регулировщика</span>
                                 </li>
@@ -244,7 +245,7 @@
                         <div class="tech_spec__button">
                             <a class="tech_spec__btn">
                                 <span>Скрыть</span>
-                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow">
+                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow" fetchpriority="high">
                             </a>
                         </div>
                     </div>
@@ -274,47 +275,68 @@
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/amarok.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
+                                </picture>
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
+                                </picture>
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
+                                </picture>
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
+                                </picture>
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/bus.html">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
+                                </picture>
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide active">
                             <a class="gallery_item_link" href="#">
-                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
+                                </picture>
                             </a>
                         </div>
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                        <div class="gallery_item swiper-slide">
+                            <a class="gallery_item_link" href="../pages/velo.html">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
+                                </picture>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
                     <button class="prev_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" fetchpriority="high">
                     </button>
                     <button class="next_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" fetchpriority="high">
                     </button>
                 </div>
             </div>
@@ -622,6 +644,5 @@
         });
     // }, 1500);
 </script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </body>
 </html>
