--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -38,6 +38,7 @@
     <title>Гараж ЦОДД</title>
     <meta name="description" content="Smooth Cam movement"/>
     <link rel="stylesheet" href="../style/style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script>
         // setTimeout(() => {
@@ -148,7 +149,7 @@
     </div>
 </header>
 
-<main>
+<main class="models">
     <section class="tech_spec">
         <div class="container__content">
             <div class="tech_spec__wrapper">
@@ -276,7 +277,7 @@
                             <a class="gallery_item_link" href="../pages/amarok.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
                             </a>
@@ -285,7 +286,7 @@
                             <a class="gallery_item_link" href="../pages/ford.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">-->
                             </a>
@@ -294,7 +295,7 @@
                             <a class="gallery_item_link" href="../pages/kater.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">-->
                             </a>
@@ -303,7 +304,7 @@
                             <a class="gallery_item_link" href="#">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
                             </a>
@@ -312,7 +313,7 @@
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
                             </a>
@@ -321,24 +322,27 @@
                             <a class="gallery_item_link" href="../pages/moskvich.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                        <div class="gallery_item swiper-slide">
+                            <a class="gallery_item_link" href="../pages/velo.html">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
+                                </picture>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
                     <button class="prev_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" loading="lazy" decoding="async">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" fetchpriority="high">
                     </button>
                     <button class="next_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" loading="lazy" decoding="async">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" fetchpriority="high">
                     </button>
                 </div>
             </div>
@@ -475,7 +479,5 @@
             });
     // }, 1500);
 </script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
 </body>
 </html>
