--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -37,6 +37,7 @@
     <!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="../style/style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <!--    <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>-->
     <script>
@@ -148,7 +149,7 @@
     </div>
 </header>
 
-<main>
+<main class="models">
     <section class="tech_spec">
         <div class="container__content">
             <div class="tech_spec__wrapper">
@@ -246,7 +247,7 @@
                             <a class="gallery_item_link" href="../pages/amarok.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
                             </a>
@@ -255,7 +256,7 @@
                             <a class="gallery_item_link" href="../pages/ford.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">-->
                             </a>
@@ -264,7 +265,7 @@
                             <a class="gallery_item_link" href="../pages/kater.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
                                 </picture>
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
                             </a>
@@ -273,7 +274,7 @@
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
                             </a>
@@ -282,7 +283,7 @@
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
                             </a>
@@ -291,28 +292,28 @@
                             <a class="gallery_item_link" href="../pages/moskvich.html">
                                 <picture>
                                     <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" loading="lazy" decoding="async">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
                                 </picture>
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
-<!--                        <div class="gallery_item swiper-slide active">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
-<!--                                    <img class="menu_preview-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" loading="lazy" decoding="async">-->
-<!--                                </picture>-->
-<!--&lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
+                        <div class="gallery_item swiper-slide active">
+                            <a class="gallery_item_link" href="../pages/velo.html">
+                                <picture>
+                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
+                                </picture>
+<!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
                     <button class="prev_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" loading="lazy" decoding="async">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" fetchpriority="high">
                     </button>
                     <button class="next_button">
-                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" loading="lazy" decoding="async">
+                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" fetchpriority="high">
                     </button>
                 </div>
             </div>
@@ -320,7 +321,7 @@
     </div>
 </section>
 
-<!--<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="velo_iframe VectaryIframe"></iframe>-->
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="velo_iframe VectaryIframe"></iframe>
 <div id="overlay"></div>
 
 <!--<div id="Canvas_wrapper"></div>-->
@@ -620,6 +621,5 @@
         });
     // }, 1500);
 </script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </body>
 </html>
