слайдер поправлен + велик скрыт превью

--- a/src/index.html
+++ b/src/index.html
@@ -780,7 +780,7 @@
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">-->
-                                <video class="menu_preview-video" src="./img/video/test_video_card.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
