Эпереверстаны блоки для моделей, новая кнопка в салон + новыÐе медиа

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                         <a class="menu_navigation-link" href="#velo_patrol">велопатруль</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/kater.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/velo.mp4" muted loop playsinline></video>
                             </div>
                         </div>
                     </li>
@@ -776,11 +776,11 @@
                         <a class="garage_model_card" href="./pages/velo.html">
                             <div class="slid_img">
                                 <picture>
-                                    <source srcset="./img/layout/pages/main/slider/amarok.webp" type="image/webp">
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
+                                    <source srcset="./img/layout/pages/main/slider/velo.webp" type="image/webp">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/velo.png" alt="Патрульный пикап" fetchpriority="high">
                                 </picture>
 <!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">-->
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/velo.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
@@ -1130,19 +1130,19 @@
                     <div class="equipment_mobile-slide">
                         <div class="traffic_patrol_slider-wrapper swiper3">
                             <div class="traffic_patrol_slider swiper-wrapper">
-                                <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
+                                <a class="garage_model_card swiper-slide" href="./pages/moskvich.html">
                                     <div class="slid_img">
                                         <picture>
-                                            <source srcset="./img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" fetchpriority="high">
+                                            <source srcset="./img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД" fetchpriority="high">
                                         </picture>
-<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД">-->
-                                        <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
+                                        <!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД">-->
+                                        <video class="menu_preview-video" src="./img/video/moskvich.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Служба помощи ЦОДД</p>
-                                            <p class="slid_info-text">Легковая</p>
+                                            <p class="slid_info-text">Кроссовер</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -1156,19 +1156,19 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="garage_model_card swiper-slide" href="./pages/moskvich.html">
+                                <a class="garage_model_card swiper-slide" href="./pages/solaris_two.html">
                                     <div class="slid_img">
                                         <picture>
-                                            <source srcset="./img/layout/pages/main/slider/moskvich.webp" type="image/webp">
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД" fetchpriority="high">
+                                            <source srcset="./img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" fetchpriority="high">
                                         </picture>
-<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/moskvich.png" alt="Служба помощи ЦОДД">-->
-                                        <video class="menu_preview-video" src="./img/video/moskvich.mp4" muted loop playsinline></video>
+<!--                                        <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД">-->
+                                        <video class="menu_preview-video" src="./img/video/salaris_gray.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Служба помощи ЦОДД</p>
-                                            <p class="slid_info-text">Кроссовер</p>
+                                            <p class="slid_info-text">Легковая</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
