--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -464,7 +464,7 @@
                         <div class="gallery_item active swiper-slide">
                             <a class="gallery_item_link" href="#">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
@@ -473,7 +473,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" loading="lazy" decoding="async">-->
@@ -482,7 +482,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">-->
@@ -491,7 +491,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
@@ -500,7 +500,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
@@ -509,7 +509,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/moskvich.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
@@ -518,7 +518,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/velo.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
@@ -539,8 +539,10 @@
     </div>
 </div>
 
-<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src=""  width="100%" height="100%" class="amarok_iframe VectaryIframe" allow="xr-spatial-tracking"></iframe>
-<!--<div class="hideARButton"></div>-->
+<!--id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"-->
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="amarok_iframe VectaryIframe" allow="xr-spatial-tracking"></iframe>
+
+<div class="hideARButton"></div>
 <div id="overlay"></div>
 
 <!--<div id="Canvas_wrapper"></div>-->
@@ -770,7 +772,7 @@
     <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="175"></a-sky>
 </a-scene>
 
-<!--<script type="module" src="../js/APIVectary.js"></script>-->
+<script type="module" src="../js/APIVectary.js"></script>
 <script>
     // setTimeout(() => {
         let currentInfoPanel = null;
