--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -478,7 +478,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/amarok.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
                             </a>
@@ -486,7 +486,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
                                 </picture>
                             </a>
@@ -494,7 +494,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
                                 </picture>
                             </a>
@@ -502,7 +502,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/solaris_two.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
                             </a>
@@ -510,7 +510,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
                                 </picture>
                             </a>
@@ -518,7 +518,7 @@
                         <div class="gallery_item swiper-slide active">
                             <a class="gallery_item_link" href="#">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
                                 </picture>
                             </a>
@@ -526,7 +526,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/velo.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
                                 </picture>
                             </a>
@@ -846,5 +846,6 @@
         });
     // }, 1500);
 </script>
+<!--<script type="module" src="../js/APIVectary.js"></script>-->
 </body>
 </html>
