--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -484,7 +484,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/amarok.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">-->
@@ -493,7 +493,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/ford.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">-->
@@ -502,7 +502,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/kater.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">-->
@@ -511,7 +511,7 @@
                         <div class="gallery_item swiper-slide active">
                             <a class="gallery_item_link" href="#">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">-->
@@ -520,7 +520,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/bus.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">-->
@@ -529,7 +529,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/moskvich.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">
                                 </picture>
                                 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
@@ -538,7 +538,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="../pages/velo.html">
                                 <picture>
-                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">
+<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
                                 </picture>
                             </a>
