логÐика замены видео под устройстыв ++

--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,8 @@
     <main class="gradient_move">
         <section class="main">
             <div class="main_intro_media">
-                <video class="preview_video" src="./img/video/main_section_mob.mp4" autoplay muted loop playsinline></video>
+<!--                src="./img/video/main_section_new.mp4"-->
+                <video class="preview_video" autoplay muted loop playsinline></video>
             </div>
             <div class="main_intro_content">
                 <div class="container_main">
